--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
   "engines": {
-    "node": "12.16.3",
-    "npm": "6.14.4"
+    "node": "12.4.0",
+    "npm": "6.9.0"
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "9.1.0",
+    "@angular/cli": "^9.1.7",
     "@angular/compiler-cli": "^9.1.0",
     "@angular/animations": "^9.1.0",
     "@angular/common": "^9.1.0",
@@ -55,7 +55,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.901.0",
-    "@angular/cli": "9.1.0",
+    "@angular/cli": "^9.1.7",
     "@angular/compiler-cli": "^9.1.0",
     "@angular/language-service": "^9.1.0",
     "@nrwl/cypress": "9.3.0",
