--- a/package.json
+++ b/package.json
@@ -30,13 +30,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^9.1.0",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "^9.1.0",
     "@angular/compiler": "^9.1.0",
     "@angular/core": "^9.1.0",
     "@angular/forms": "^9.1.0",
+    "@angular/localize": "^9.1.11",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "^9.1.0",
     "@angular/platform-browser-dynamic": "^9.1.0",
     "@angular/router": "^9.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@nrwl/angular": "9.3.0",
     "bootstrap": "^4.5.0",
     "core-js": "^2.5.4",
