--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/platform-browser": "^9.1.0",
     "@angular/platform-browser-dynamic": "^9.1.0",
     "@angular/router": "^9.1.0",
+    "@material-ui/icons": "^4.9.1",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@nrwl/angular": "9.3.0",
     "bootstrap": "^4.5.0",
