work till 18 aug 2020

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@material-ui/icons": "^4.9.1",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@nrwl/angular": "9.3.0",
+    "angular-ng-autocomplete": "^2.0.1",
     "bootstrap": "^4.5.0",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
