--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@material-ui/icons": "^4.9.1",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@nrwl/angular": "9.3.0",
+    "@syncfusion/ej2-angular-layouts": "^18.2.54",
     "angular-ng-autocomplete": "^2.0.1",
     "bootstrap": "^4.5.0",
     "core-js": "^2.5.4",
@@ -50,8 +51,10 @@
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.20",
     "ngx-gallery-9": "^1.0.6",
+    "ngx-scrollbar": "^7.3.0",
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
+    "three": "^0.120.1",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
