--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@angular/router": "^9.1.0",
     "@material-ui/icons": "^4.9.1",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@ngx-loading-bar/core": "^5.1.0",
+    "@ngx-loading-bar/router": "^5.1.0",
     "@nrwl/angular": "9.3.0",
     "@syncfusion/ej2-angular-layouts": "^18.2.54",
     "angular-ng-autocomplete": "^2.0.1",
@@ -50,6 +52,7 @@
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.20",
+    "ngx-bootstrap": "^6.1.0",
     "ngx-gallery-9": "^1.0.6",
     "ngx-scrollbar": "^7.3.0",
     "path": "^0.12.7",
